ADM-150076 Fixed up JVM params to include m, otherwise instance won't start. Wrapped preferredTestQuery in quotes to ensure init scripts work.

--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -634,166 +634,166 @@ Mappings:
   AWSInstanceType2Arch:
     c3.large:
       Arch: HVM64
-      Jvmheap: 3072
+      Jvmheap: 3072m
     c3.xlarge:
       Arch: HVM64
-      Jvmheap: 6144
+      Jvmheap: 6144m
     c3.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c3.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c3.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c4.large:
       Arch: HVM64
-      Jvmheap: 3072
+      Jvmheap: 3072m
     c4.xlarge:
       Arch: HVM64
-      Jvmheap: 6144
+      Jvmheap: 6144m
     c4.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c4.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c4.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c5.large:
       Arch: HVM64
-      Jvmheap: 3072
+      Jvmheap: 3072m
     c5.xlarge:
       Arch: HVM64
-      Jvmheap: 6144
+      Jvmheap: 6144m
     c5.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c5.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c5.9xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c5.18xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     d2.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     d2.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     d2.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     d2.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i2.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i2.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i2.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i2.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.large:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.16xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     m3.medium:
       Arch: HVM64
-      Jvmheap: 3072
+      Jvmheap: 3072m
     m4.large:
       Arch: HVM64
-      Jvmheap: 6144
+      Jvmheap: 6144m
     m4.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     m4.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     m4.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     m4.10xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     m4.16xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r3.large:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r3.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r3.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r3.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r3.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.large:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.16xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     t2.medium:
       Arch: HVM64
-      Jvmheap: 3072
+      Jvmheap: 3072m
     t2.large:
       Arch: HVM64
-      Jvmheap: 6144
+      Jvmheap: 6144m
     t2.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     t2.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     x1.16xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     x1.32xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
   AWSRegionArch2AMI:
     ap-northeast-1:
       HVM64: ami-e16e9587
@@ -952,7 +952,7 @@ Resources:
                     - !Sub ["ATL_DB_IDLETESTPERIOD=${DBIdleTestPeriod}", DBIdleTestPeriod: !Ref DBIdleTestPeriod]
                     - !Sub ["ATL_DB_MAXSTATEMENTS=${DBMaxStatements}", DBMaxStatements: !Ref DBMaxStatements]
                     - !Sub ["ATL_DB_VALIDATE=${DBValidate}", DBValidate: !Ref DBValidate]
-                    - !Sub ["ATL_DB_PREFERREDTESTQUERY=${DBPreferredTestQuery}", DBPreferredTestQuery: !Ref DBPreferredTestQuery]
+                    - !Sub ["ATL_DB_PREFERREDTESTQUERY=\"${DBPreferredTestQuery}\"", DBPreferredTestQuery: !Ref DBPreferredTestQuery]
                     - !Sub ["ATL_DB_ACQUIREINCREMENT=${DBAcquireIncrement}", DBAcquireIncrement: !Ref DBAcquireIncrement]
                     - "ATL_JDBC_DRIVER=org.postgresql.Driver"
                     - !Sub
