--- a/templates/JiraDataCenter.template.yaml
+++ b/templates/JiraDataCenter.template.yaml
@@ -479,130 +479,130 @@ Mappings:
   AWSInstanceType2Arch:
     c3.large:
       Arch: HVM64
-      Jvmheap: 3072
+      Jvmheap: 3072m
     c3.xlarge:
       Arch: HVM64
-      Jvmheap: 6144
+      Jvmheap: 6144m
     c3.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c3.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c3.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c4.large:
       Arch: HVM64
-      Jvmheap: 3072
+      Jvmheap: 3072m
     c4.xlarge:
       Arch: HVM64
-      Jvmheap: 6144
+      Jvmheap: 6144m
     c4.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c4.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     c4.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     d2.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     d2.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     d2.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     d2.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.large:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     i3.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     m3.medium:
       Arch: HVM64
-      Jvmheap: 3072
+      Jvmheap: 3072m
     m4.large:
       Arch: HVM64
-      Jvmheap: 6144
+      Jvmheap: 6144m
     m4.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     m4.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     m4.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     m4.10xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     m4.16xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r3.large:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r3.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r3.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r3.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r3.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.large:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.4xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     r4.8xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     t2.medium:
       Arch: HVM64
-      Jvmheap: 3072
+      Jvmheap: 3072m
     t2.large:
       Arch: HVM64
-      Jvmheap: 6144
+      Jvmheap: 6144m
     t2.xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     t2.2xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     x1.16xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
     x1.32xlarge:
       Arch: HVM64
-      Jvmheap: 12288
+      Jvmheap: 12288m
   AWSRegionArch2AMI:
     ap-northeast-1:
       HVM64: ami-da107bbd
