--- a/templates/BitbucketServer.template
+++ b/templates/BitbucketServer.template
@@ -464,59 +464,63 @@
     },
     "AWSRegionArch2AMI": {
       "us-east-1": {
-        "HVM64": "ami-d24a91a8",
+        "HVM64": "ami-fb98c481",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ap-south-1": {
-        "HVM64": "ami-f49ad89b",
+        "HVM64": "ami-8aacf8e5",
+        "HVMG2": "NOT_SUPPORTED"
+      },
+      "eu-west-3": {
+        "HVM64": "ami-5304b32e",
         "HVMG2": "NOT_SUPPORTED"
       },
       "eu-west-2": {
-        "HVM64": "ami-6ff8e50b",
+        "HVM64": "ami-75948c11",
         "HVMG2": "NOT_SUPPORTED"
       },
       "eu-west-1": {
-        "HVM64": "ami-695f8410",
+        "HVM64": "ami-6709981e",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ap-northeast-2": {
-        "HVM64": "ami-79228717",
+        "HVM64": "ami-d0ae0ebe",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ap-northeast-1": {
-        "HVM64": "ami-8218bfe4",
+        "HVM64": "ami-9370eef5",
         "HVMG2": "NOT_SUPPORTED"
       },
       "sa-east-1": {
-        "HVM64": "ami-bae099d6",
+        "HVM64": "ami-871153eb",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ca-central-1": {
-        "HVM64": "ami-f2942c96",
+        "HVM64": "ami-d9f471bd",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ap-southeast-1": {
-        "HVM64": "ami-62d39501",
+        "HVM64": "ami-e5631399",
         "HVMG2": "NOT_SUPPORTED"
       },
       "ap-southeast-2": {
-        "HVM64": "ami-1116fa73",
+        "HVM64": "ami-9743b1f5",
         "HVMG2": "NOT_SUPPORTED"
       },
       "eu-central-1": {
-        "HVM64": "ami-8809b1e7",
+        "HVM64": "ami-5b23b034",
         "HVMG2": "NOT_SUPPORTED"
       },
       "us-east-2": {
-        "HVM64": "ami-66aa8603",
+        "HVM64": "ami-24d0fb41",
         "HVMG2": "NOT_SUPPORTED"
       },
       "us-west-1": {
-        "HVM64": "ami-57af9237",
+        "HVM64": "ami-fbcbcb9b",
         "HVMG2": "NOT_SUPPORTED"
       },
       "us-west-2": {
-        "HVM64": "ami-290ac651",
+        "HVM64": "ami-f611a48e",
         "HVMG2": "NOT_SUPPORTED"
       }
     }
