--- a/templates/ConfluenceDataCenter.template.yaml
+++ b/templates/ConfluenceDataCenter.template.yaml
@@ -70,6 +70,7 @@ Metadata:
             - TomcatContextPath
             - CatalinaOpts
             - JvmHeapOverride
+            - JvmHeapOverrideSynchrony
             - DBPoolMaxSize
             - DBPoolMinSize
             - DBTimeout
@@ -163,6 +164,8 @@ Metadata:
         default: Internal subnets *
       JvmHeapOverride:
         default: JVM Heap Size Override
+      JvmHeapOverrideSynchrony:
+        default: 2g
       KeyName:
         default: Key Name *
       NumBastionHosts:
@@ -471,6 +474,9 @@ Parameters:
     Default: ''
     Description: Override the default amount of Memory to allocate to the JVM for your instance type - set size in meg or gig e.g. 1024m or 1g
     Type: String
+  JvmHeapOverrideSynchrony:
+    Default: '2g'
+    Description: Override the default amount of memory to allocoate to the JVM for Synchrony, for your instance type - set size in meg or gig e.g. 1024m or 1g.
   KeyName:
     ConstraintDescription: Must be the name of an existing EC2 Key Pair.
     Description: The EC2 Key Pair to allow SSH access to the instances
@@ -627,6 +633,8 @@ Conditions:
     !Equals [!Ref TomcatScheme, 'https']
   OverrideHeap:
     !Not [!Equals [!Ref JvmHeapOverride, '']]
+  OverrideHeapSynchrony:
+    !Not [!Equals [!Ref JvmHeapOverrideSynchrony, '']]
   UseContextPath:
     !Not [!Equals [!Ref TomcatContextPath, '']]
   UseCustomDnsName:
@@ -1196,7 +1204,7 @@ Resources:
                     - "ATL_RELEASE_S3_BUCKET=atlassian-software"
                     - "ATL_RELEASE_S3_PATH=releases/confluence"
                     - "ATL_SSL_SELF_CERT_ENABLED=false"
-                    - "ATL_SYNCHRONY_MEMORY=-Xmx2g"
+                    - "ATL_SYNCHRONY_MEMORY=-Xmx${AtlJvmHeapSynchrony}", AtlJvmHeapSynchrony: !If [OverrideHeapSynchrony, !Ref 'JvmHeapOverrideSynchrony']
                     - "ATL_SYNCHRONY_STACK_SPACE=-Xss2048k"
                     - "ATL_SYNCHRONY_WAITING_CONFIG_TIME=20"
             /etc/cfn/cfn-hup.conf:
